# gil

./: Cargo.toml  LICENSE  README.md  archives.yaml  config.yaml
src/: api.rs  archive.rs  args.rs  cmd.rs  color.rs  config.rs  context.rs  fmt.rs  git.rs  lockfile.rs  main.rs  oidc.rs  types.rs  utils.rs
src/api/: keys.rs  personal_access_tokens.rs  user.rs  users.rs
src/api/keys/: get.rs
src/api/personal_access_tokens/: get.rs  personal_access_tokens.rs  revoke.rs  rotate.rs
src/api/users/: keys.rs  personal_access_tokens.rs
src/api/users/keys/: add.rs  delete.rs  keys.rs  list.rs
src/api/users/personal_access_tokens/: create.rs
src/cmd/: archive.rs  branches.rs  get.rs  keys.rs  mod.rs  pipeline.rs  print.rs  project.rs  tags.rs  token.rs  users.rs
src/types/: keys.rs  pipeline.rs  project.rs  repository.rs  token.rs  user.rs
