[package]
name = "glctl"
version = "0.3.1"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
bytesize = "1.0.0"
derive_builder = "0.11.2"
directories = "4.0.1"
flate2 = "1.0"
git-repository = "0.25.0"
gitlab = "0.1504.0"
indoc = "1.0.7"
open = "3.0.3"
openidconnect = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9"
tar = "0.4"

[patch.crates-io]
# gitlab = { path = "../rust-gitlab" }
