[package]
name = "glctl"
version = "0.5.9"
description = "Command line tool to interact with Gitlab AP from a git repository"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
atty = { version = "0.2.14" }
bytesize = "1.0.0"
chrono = "0.4.22"
derive_builder = "0.11.2"
directories = "4.0.1"
flate2 = "1.0"
git-repository = "0.25.0"
gitlab = "0.1504.0"
indoc = "1.0.7"
open = "3.0.3"
openidconnect = "2.3.2"
semver = "1.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9"
tar = "0.4"
termcolor = { version = "1.1.3", optional = true }
timeago = { version = "0.3.1", default-features = false, features = ["chrono"] }
yew-ansi = { version = "0.1.0", default-features = false }
reqwest = "0.11"

[patch.crates-io]
# gitlab = { path = "../rust-gitlab" }

[features]
default = ["color"]
color = ["dep:termcolor"]
