[package]
name = "gil"
version = "0.8.0"
description = "Command line tool to interact with Gitlab AP from a git repository"
authors = ["Éric BURGHARD <eric@itsufficient.me>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
argh = "0.1"
atty = { version = "0.2.14" }
bytesize = "1.0.0"
chrono = "0.4.22"
derive_builder = "0.12.0"
directories = "5.0.1"
flate2 = "1.0"
git-repository = "0.25.0"
gitlab = "0.1609.2"
indoc = "2.0.4"
open = "5.0.0"
openidconnect = "3.3.1"
semver = "1.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9"
tar = "0.4"
termcolor = { version = "1.1.3", optional = true }
timeago = { version = "0.4.1", default-features = false, features = ["chrono"] }
yew-ansi = { version = "0.2.0", default-features = false }
reqwest = "0.11"
http = "1.0.0"
ssh-key = { version = "0.6.3", features = ["ecdsa", "dsa", "rsa"] }

[patch.crates-io]
# gitlab = { path = "../rust-gitlab" }

[features]
default = ["color"]
color = ["dep:termcolor"]
